[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/OpponentPaddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/BallManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/PauseButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/PlayerPaddle.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/TouchPad.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/Background.tscn" type="PackedScene" id=6]
[ext_resource path="res://game_scenes/GamePlay.gd" type="Script" id=7]
[ext_resource path="res://entities/HeartManager.tscn" type="PackedScene" id=8]

[node name="GamePlay" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" parent="." instance=ExtResource( 6 )]

[node name="PauseButton" parent="." instance=ExtResource( 3 )]
margin_bottom = 0.0

[node name="BallManager" parent="." instance=ExtResource( 2 )]

[node name="OpponentPaddle" parent="." instance=ExtResource( 1 )]

[node name="PlayerPaddle" parent="." instance=ExtResource( 4 )]

[node name="TouchPad" parent="." instance=ExtResource( 5 )]

[node name="HeartManager" parent="." instance=ExtResource( 8 )]

[connection signal="alert_level_player_lose" from="BallManager" to="." method="_on_BallManager_alert_level_player_lose"]
